--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
 
         <section id="about" class="py-20">
             <div class="container mx-auto px-6 max-w-3xl text-center">
-                <h2 class="font-display text-3xl font-bold text-slate-800">Our Philosophy: A Kombragroup Venture</h2>
+                <h2 class="font-display text-3xl font-bold text-slate-800">Our Philosophy: A KombraGroup Venture</h2>
                 <p class="mt-6 text-lg text-slate-600">Kombra Care was founded on the belief that parents, educators, and therapists are a child's most powerful allies. Our platform is designed to unite this care team, providing a shared language and data-driven insights to foster a child's growth. We replace uncertainty with confident, coordinated action.</p>
                  <div class="mt-8 bg-white p-8 rounded-lg shadow-lg border-t-4 border-primary">
-                    <h3 class="text-xl font-bold text-accent">Our Connection to Kombragroup</h3>
-                    <p class="mt-4 text-slate-600">Kombra Care is a venture from **Kombragroup**, a foundry dedicated to architecting technology that solves systemic social challenges. Our work is guided by the Kombragroup mission to build profitable companies that generate measurable social progress. We are proud to apply this "Profit in Progress" model to the urgent need for better neurodiversity support.</p>
-                    <a href="https://kombragroup.com/#thesis" target="_blank" class="mt-6 inline-block text-primary font-semibold hover:underline">Learn About the Kombragroup Mission →</a>
+                    <h3 class="text-xl font-bold text-accent">Our Connection to KombraGroup</h3>
+                    <p class="mt-4 text-slate-600">Kombra Care is a venture from KombraGroup a foundry dedicated to architecting technology that solves systemic social challenges. Our work is guided by the KombraGroup mission to build profitable companies that generate measurable social progress. We are proud to apply this "Profit in Progress" model to the urgent need for better neurodiversity support.</p>
+                    <a href="https://kombragroup.com/#thesis" target="_blank" class="mt-6 inline-block text-primary font-semibold hover:underline">Learn About the KombraGroup Mission →</a>
                 </div>
             </div>
         </section>
@@ -80,7 +80,7 @@
         <section id="waitlist" class="py-20 bg-primary">
              <div class="container mx-auto px-6 max-w-2xl text-center">
                 <h2 class="font-display text-3xl font-bold text-white">Join the Waitlist</h2>
-                <p class="mt-4 text-lg text-white/90">Be the first to access Kombragroup Care. Our Beta Program is opening soon for parents, educators, and therapists. Sign up for exclusive updates and early access.</p>
+                <p class="mt-4 text-lg text-white/90">Be the first to access Kombra Care. Our Beta Program is opening soon for parents, educators, and therapists. Sign up for exclusive updates and early access.</p>
                 <form name="care-waitlist" method="POST" data-netlify="true" class="mt-8">
                      <div class="grid grid-cols-1 md:grid-cols-2 gap-4 max-w-xl mx-auto">
                         <input type="text" name="name" required placeholder="Your Full Name" class="w-full px-4 py-3 rounded-md border-gray-300 focus:outline-none">
@@ -130,7 +130,7 @@
 
     <footer class="bg-gray-800 text-white py-8">
         <div class="container mx-auto px-6 text-center">
-            <p>&copy; 2025 Kombragroup, Inc. All Rights Reserved.</p>
+            <p>&copy; 2025 KombraGroup, Inc. All Rights Reserved.</p>
         </div>
     </footer>
 </body>
